# boost_socket_testing

./: .cproject  .gitignore  .project  CMakeLists.txt  main.cpp
.github/workflows/: greetings.yml
Socket/: Base_AsioSocket.cpp  Base_AsioSocket.h  SocketInfo.h  Wrapper_AsioTcp.cpp  Wrapper_AsioTcp.h  Wrapper_AsioUdp.cpp  Wrapper_AsioUdp.h
Thread/: ReceiveSocketThread.cpp  ReceiveSocketThread.h  RxThread.cpp  RxThread.h  SocketInfo.h  SocketThread.cpp  SocketThread.h  ThreadBase.cpp  ThreadBase.h  TransmitSocketThread.cpp  TransmitSocketThread.h  TxThread.cpp  TxThread.h  Wrapper_AsioUdp.cpp  Wrapper_AsioUdp.h
Utility/: ObserverPtr.h
tests/: CMakeLists.txt  test_TCP_TransmitReceive.cpp  test_TransmitReceive.h  test_UDP_TransmitReceive.cpp  test_main.cpp
